add starter styles

--- a/src/components/Atom/CTACanvas/style.scss
+++ b/src/components/Atom/CTACanvas/style.scss
@@ -2,10 +2,13 @@
     position: relative;
     display: grid;
     place-items: center;
+    min-height: 100vh;
 
-    canvas {
+    .canvas-container {
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        z-index: -1;
     }
 }
