--- a/src/components/String/Text/style.scss
+++ b/src/components/String/Text/style.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 .title {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Syncopate', serif;
     font-size: 10vw;
     color: var(--dark);
 }
@@ -19,7 +19,7 @@
     color: var(--light);
 }
 
-.important {
+.subtitle {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     font-size: 5vw;
