--- a/src/components/Quark/Button/style.scss
+++ b/src/components/Quark/Button/style.scss
@@ -29,7 +29,7 @@
 
     .image {
         transition: var(--duration-quick);
-        width: 25px;
+        height: 20px;
         object-fit: contain;
         margin-left: 10px;
     }
