--- a/src/components/Atom/Slide2D/style.scss
+++ b/src/components/Atom/Slide2D/style.scss
@@ -2,5 +2,47 @@
     Use grid to accommodate items
 */
 .slide-2d {
-    
+    min-height: 100vh;
+    width: min(calc(100% - 50px), 1024px);
+    margin: auto;
+    display: grid;
+    grid-template-areas: 'a .'
+                         'b e'
+                         'c e'
+                         'c e'
+                         'd e'
+                         '. f';
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 25px;
+
+    & > .text:nth-child(1) {
+        grid-area: a;
+    }
+
+    & > .text:nth-child(2) {
+        grid-area: b;
+    }
+
+    & > .text:nth-child(3) {
+        grid-area: c;
+    }
+
+    & > .text + &__container {
+        grid-area: d;
+        visibility: hidden;
+
+        &.show {
+            visibility: visible;
+        }
+    }
+
+    & > .image {
+        grid-area: e;
+        width: 100%;
+        height: 100%;
+    }
+
+    & > .image + &__container {
+        grid-area: f;
+    }
 }
