--- a/src/components/Atom/Hint/style.scss
+++ b/src/components/Atom/Hint/style.scss
@@ -19,19 +19,15 @@
     }
 
     .button {
-        background: var(--color-light);
         border-radius: 0;
 
         &:hover .light-paragraph {
-            text-shadow: 0 0 15px var(--color-dark);
-        }
-
-        &:active .light-paragraph {
-            text-shadow: 0 0 25px var(--color-dark);
+            text-shadow: 0 0 10px var(--color-light);
         }
 
         .light-paragraph {
-            color: var(--color-dark);
+            transition: var(--duration-quick);
+            color: var(--color-light);
         }
     }
 
