--- a/src/components/String/GlobalWrapper/variables.scss
+++ b/src/components/String/GlobalWrapper/variables.scss
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 html {
-    --font-title: 'Syncopate', serif;
+    --font-title: 'Exo', serif;
     --font-text: 'Open Sans', sans-serif;
     --color-dark: #101010;
     --color-light: #f0f0f0;
     --duration-quick: .3s;
     --duration-medium: 1s;
     --duration-slow: 3s;
+    --measure-large: 1240px;
+    --measure-medium: 920px;
+    --measure-small: 640px;
 }
